// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`../index.js <Home /> (render true, is dark false) should render 1`] = `
<div
  className="Container"
  maxWidth="md"
>
  <section
    className="lib-home-section-root({\\"paddingTop\\":\\"theme.spacing(8)\\",\\"paddingBottom\\":\\"theme.spacing(8)\\",\\"& > *\\":{\\"marginTop\\":\\"theme.spacing(4)\\",\\"marginBottom\\":\\"theme.spacing(4)\\"}})"
  >
    <div
      align="center"
      className="Typography"
      component="h1"
      variant="h4"
    >
      <div
        className="translation"
      >
        <div
          className="en"
        >
          Hi! My name is Lucas 
          <br />
           Welcome to my Personal Website
        </div>
        <div
          className="es"
        >
          Hola! mi nombre es Lucas 
          <br />
           Bienvenido a mi Página Web Personal
        </div>
      </div>
    </div>
    <div
      className="Toolbar lib-home-toolbar({\\"justifyContent\\":\\"center\\"})"
    >
      <button
        color="primary"
        onClick={[Function]}
        variant="contained"
      >
        <div
          className="translation"
        >
          <div
            className="en"
          >
            Get in Touch
          </div>
          <div
            className="es"
          >
            Pongámonos en Contacto
          </div>
        </div>
      </button>
    </div>
    <div
      className="SvgImage"
      isDark={false}
      source="svg.onlineProfile"
    />
  </section>
  <section
    className="lib-home-section-root({\\"paddingTop\\":\\"theme.spacing(8)\\",\\"paddingBottom\\":\\"theme.spacing(8)\\",\\"& > *\\":{\\"marginTop\\":\\"theme.spacing(4)\\",\\"marginBottom\\":\\"theme.spacing(4)\\"}})"
  >
    <div
      align="center"
      className="Typography"
      component="h1"
      variant="h4"
    >
      <div
        className="translation"
      >
        <div
          className="en"
        >
          Skill Set
        </div>
        <div
          className="es"
        >
          Capacitación Profesional
        </div>
      </div>
    </div>
    <div
      className="Typography"
      component="p"
      variant="h5"
    >
      <div
        className="translation"
      >
        <div
          className="en"
        >
          I'm a Computer Programmer focused on Web Development. I can be part of teams working with technologies like JavaScript, React, NodeJS, etc.
        </div>
        <div
          className="es"
        >
          Soy un Programador de Computadoras centrado en el Desarrollo de Páginas Web. Puedo ser parte de equipos trabajando con tecnologías como JavaScript, React, NodeJS, etc.
        </div>
      </div>
    </div>
    <div
      className="SvgImage"
      isDark={false}
      source="svg.technologies"
    />
  </section>
  <section
    className="lib-home-section-root({\\"paddingTop\\":\\"theme.spacing(8)\\",\\"paddingBottom\\":\\"theme.spacing(8)\\",\\"& > *\\":{\\"marginTop\\":\\"theme.spacing(4)\\",\\"marginBottom\\":\\"theme.spacing(4)\\"}})"
  >
    <div
      align="center"
      className="Typography"
      component="h1"
      variant="h4"
    >
      <div
        className="translation"
      >
        <div
          className="en"
        >
          Experience
        </div>
        <div
          className="es"
        >
          Experiencia
        </div>
      </div>
    </div>
    <div
      className="Typography"
      component="p"
      variant="h5"
    >
      <div
        className="translation"
      >
        <div
          className="en"
        >
          I've made this website to showcase my abilities as a programmer. Take a look around or check the 
          <a
            href="https://github.com/lucasMontenegro/lucas-montenegro"
            target="__blank"
          >
            source code on GitHub
          </a>
          .
        </div>
        <div
          className="es"
        >
          Hice este sitio web para mostrar mis habilidades como programador. Podés explorarlo o ver el 
          <a
            href="https://github.com/lucasMontenegro/lucas-montenegro"
            target="__blank"
          >
            código fuente en GitHub
          </a>
          .
        </div>
      </div>
    </div>
    <div
      className="SvgImage"
      isDark={false}
      source="svg.website"
    />
  </section>
  <section
    className="lib-home-contact({\\"padding\\":\\"theme.spacing(2)\\"})"
  >
    <div
      className="Card lib-home-contactCard({\\"padding\\":\\"theme.spacing(4)\\",\\"backgroundColor\\":\\"#fdfdfd\\"})"
      raised={true}
    >
      <div
        className="WufooForm"
        hash={
          <div
            className="translation"
          >
            <div
              className="en"
            >
              zdhts7212isvs6
            </div>
            <div
              className="es"
            >
              q5wuhcb17c2yrt
            </div>
          </div>
        }
        height="435"
      />
    </div>
  </section>
</div>
`;

exports[`../index.js <Home /> (render true, is dark true) should render 1`] = `
<div
  className="Container"
  maxWidth="md"
>
  <section
    className="lib-home-section-root({\\"paddingTop\\":\\"theme.spacing(8)\\",\\"paddingBottom\\":\\"theme.spacing(8)\\",\\"& > *\\":{\\"marginTop\\":\\"theme.spacing(4)\\",\\"marginBottom\\":\\"theme.spacing(4)\\"}})"
  >
    <div
      align="center"
      className="Typography"
      component="h1"
      variant="h4"
    >
      <div
        className="translation"
      >
        <div
          className="en"
        >
          Hi! My name is Lucas 
          <br />
           Welcome to my Personal Website
        </div>
        <div
          className="es"
        >
          Hola! mi nombre es Lucas 
          <br />
           Bienvenido a mi Página Web Personal
        </div>
      </div>
    </div>
    <div
      className="Toolbar lib-home-toolbar({\\"justifyContent\\":\\"center\\"})"
    >
      <button
        color="primary"
        onClick={[Function]}
        variant="contained"
      >
        <div
          className="translation"
        >
          <div
            className="en"
          >
            Get in Touch
          </div>
          <div
            className="es"
          >
            Pongámonos en Contacto
          </div>
        </div>
      </button>
    </div>
    <div
      className="SvgImage"
      isDark={true}
      source="svg.onlineProfile"
    />
  </section>
  <section
    className="lib-home-section-root({\\"paddingTop\\":\\"theme.spacing(8)\\",\\"paddingBottom\\":\\"theme.spacing(8)\\",\\"& > *\\":{\\"marginTop\\":\\"theme.spacing(4)\\",\\"marginBottom\\":\\"theme.spacing(4)\\"}})"
  >
    <div
      align="center"
      className="Typography"
      component="h1"
      variant="h4"
    >
      <div
        className="translation"
      >
        <div
          className="en"
        >
          Skill Set
        </div>
        <div
          className="es"
        >
          Capacitación Profesional
        </div>
      </div>
    </div>
    <div
      className="Typography"
      component="p"
      variant="h5"
    >
      <div
        className="translation"
      >
        <div
          className="en"
        >
          I'm a Computer Programmer focused on Web Development. I can be part of teams working with technologies like JavaScript, React, NodeJS, etc.
        </div>
        <div
          className="es"
        >
          Soy un Programador de Computadoras centrado en el Desarrollo de Páginas Web. Puedo ser parte de equipos trabajando con tecnologías como JavaScript, React, NodeJS, etc.
        </div>
      </div>
    </div>
    <div
      className="SvgImage"
      isDark={true}
      source="svg.technologies"
    />
  </section>
  <section
    className="lib-home-section-root({\\"paddingTop\\":\\"theme.spacing(8)\\",\\"paddingBottom\\":\\"theme.spacing(8)\\",\\"& > *\\":{\\"marginTop\\":\\"theme.spacing(4)\\",\\"marginBottom\\":\\"theme.spacing(4)\\"}})"
  >
    <div
      align="center"
      className="Typography"
      component="h1"
      variant="h4"
    >
      <div
        className="translation"
      >
        <div
          className="en"
        >
          Experience
        </div>
        <div
          className="es"
        >
          Experiencia
        </div>
      </div>
    </div>
    <div
      className="Typography"
      component="p"
      variant="h5"
    >
      <div
        className="translation"
      >
        <div
          className="en"
        >
          I've made this website to showcase my abilities as a programmer. Take a look around or check the 
          <a
            href="https://github.com/lucasMontenegro/lucas-montenegro"
            target="__blank"
          >
            source code on GitHub
          </a>
          .
        </div>
        <div
          className="es"
        >
          Hice este sitio web para mostrar mis habilidades como programador. Podés explorarlo o ver el 
          <a
            href="https://github.com/lucasMontenegro/lucas-montenegro"
            target="__blank"
          >
            código fuente en GitHub
          </a>
          .
        </div>
      </div>
    </div>
    <div
      className="SvgImage"
      isDark={true}
      source="svg.website"
    />
  </section>
  <section
    className="lib-home-contact({\\"padding\\":\\"theme.spacing(2)\\"})"
  >
    <div
      className="Card lib-home-contactCard({\\"padding\\":\\"theme.spacing(4)\\",\\"backgroundColor\\":\\"#ededed\\"})"
      raised={true}
    >
      <div
        className="WufooForm"
        hash={
          <div
            className="translation"
          >
            <div
              className="en"
            >
              zdhts7212isvs6
            </div>
            <div
              className="es"
            >
              q5wuhcb17c2yrt
            </div>
          </div>
        }
        height="435"
      />
    </div>
  </section>
</div>
`;

exports[`../index.js should use the right verions of its dependencies 1`] = `
Object {
  "@material-ui/core": "^4.5.0",
  "react": "^16.10.1",
}
`;
